objects/Account_Billing_Info__c.object
<CustomObject>
    <fields>
        <fullName>Account_Billing_Info_Line_Total__c</fullName>
        <description>Sum of Totals of Child Account Billing Info Line Total records</description>
        <inlineHelpText>Sum of Totals of Child Account Billing Info Line Total records</inlineHelpText>
        <label>Document Total</label>
        <summarizedField>Account_Billing_Info_Line__c.Amount__c</summarizedField>
        <summaryForeignKey>Account_Billing_Info_Line__c.Account_Billing_Info__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Attachment_Name__c</fullName>
        <formula>SUBSTITUTE( TEXT(Document_Type__c), &apos; &apos;, &apos;&apos;)   + &apos;-&apos; +  IF(Sold_To_NS_Bill_To__c != End_User__c, Sold_To_NS_Bill_To__r.Name + &apos;-&apos; + End_User__r.Name, Sold_To_NS_Bill_To__r.Name) + &apos;-&apos; + Order__r.Month__c + &apos;-&apos; + Order__r.Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attachment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Form__c</fullName>
        <label>Custom Form</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>De_Book_Order__c</fullName>
        <label>De-Book Order #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>De_Book_Order_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>De-Book Order flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Memo</fullName>
                </value>
                <value>
                    <fullName>Debit Memo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email10__c</fullName>
        <label>Email10</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email1__c</fullName>
        <inlineHelpText>Primary email. Should always be populated before any other email fields.</inlineHelpText>
        <label>Email1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email2__c</fullName>
        <label>Email2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Subject_Company_Name__c</fullName>
        <formula>IF(Sold_To_NS_Bill_To__c != End_User__c, Sold_To_NS_Bill_To__r.Name + &apos;/&apos; + End_User__r.Name, Sold_To_NS_Bill_To__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Subject Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Billing_Info2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <description>Currency Exchange Rate at 8 decimal place precision</description>
        <inlineHelpText>Currency Exchange Rate at 8 decimal place precision</inlineHelpText>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Memo_Text__c</fullName>
        <label>Memo Text</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NS_Invoice_Number__c</fullName>
        <label>NS Invoice Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_SO_Number__c</fullName>
        <label>NS SO Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_Status__c</fullName>
        <description>The Status of the record in NetSuite</description>
        <inlineHelpText>The Status of the record in NetSuite</inlineHelpText>
        <label>NS_Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Fully Applied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipName>Account_Billing_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Date__c</fullName>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posting_Period__c</fullName>
        <description>Date in which the Credit or Debit will be recognized</description>
        <inlineHelpText>Date in which the Credit or Debit will be recognized</inlineHelpText>
        <label>Posting Period</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Reason for the Credit Memo or Debit Memo</description>
        <inlineHelpText>Reason for the Credit Memo or Debit Memo</inlineHelpText>
        <label>Reason</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Order__r.Region__c</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Billing_Info3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_To_NS_Bill_To__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Primary Sold To Mandatory in NetSuite</description>
        <inlineHelpText>Primary Sold To Mandatory in NetSuite</inlineHelpText>
        <label>Sold To NS Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Billing_Info1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Secondary Optional Sold To in NetSuite</description>
        <inlineHelpText>Secondary Optional Sold To in NetSuite</inlineHelpText>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Billing_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>SalesForce status of this Account Billing Info Record</description>
        <inlineHelpText>SalesForce status of this Account Billing Info Record</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Send Email</fullName>
                </value>
                <value>
                    <fullName>Email Sent</fullName>
                </value>
                <value>
                    <fullName>PDF Attached</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subsidiary__c</fullName>
        <formula>Order__r.End_User_Name__r.Subsidary__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subsidiary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Number__c</fullName>
        <label>Tax Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Credit Memo</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Document_Type__c</columns>
        <columns>Sold_To_NS_Bill_To__c</columns>
        <columns>End_User__c</columns>
        <columns>Subsidiary__c</columns>
        <columns>NS_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Email1__c</columns>
        <columns>Order__c</columns>
        <columns>Date__c</columns>
        <columns>Total_Amount__c</columns>
        <columns>Account_Billing_Info_Line_Total__c</columns>
        <columns>Memo__c</columns>
        <columns>Memo_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cloud_Credit_Memos</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Document_Type__c</columns>
        <columns>Sold_To_NS_Bill_To__c</columns>
        <columns>End_User__c</columns>
        <columns>Subsidiary__c</columns>
        <columns>NS_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Email1__c</columns>
        <columns>Order__c</columns>
        <columns>Date__c</columns>
        <columns>Total_Amount__c</columns>
        <columns>Account_Billing_Info_Line_Total__c</columns>
        <columns>Memo__c</columns>
        <columns>Memo_Text__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account_Billing_Info__c.Cloud_Billing</value>
        </filters>
        <label>Cloud Credit Memos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Credit_Memo_FinOps_Account_Billing_Info</fullName>
        <filterScope>Queue</filterScope>
        <label>FinOps</label>
        <queue>Credit_Memo_FinOps</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Memo_OM_Director_Account_Billing_Info</fullName>
        <filterScope>Queue</filterScope>
        <label>OM Director</label>
        <queue>Credit_Memo_OM_Director</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Memo_Revenue_Director_Account_Billing_Info</fullName>
        <filterScope>Queue</filterScope>
        <label>Revenue Accountant</label>
        <queue>Credit_Memo_Revenue_Director</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Memo_VP_Shared_Services_Account_Billing_Info</fullName>
        <filterScope>Queue</filterScope>
        <label>VP Shared Services</label>
        <queue>Credit_Memo_VP_Shared_Services</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Memo</pluralLabel>
    <recordTypes>
        <fullName>Cloud_Billing</fullName>
        <active>true</active>
        <description>Credit Memo Associated with Cloud Billing Order</description>
        <label>Cloud Billing</label>
    </recordTypes>
    <recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <description>General Credit Memos not specifically associated with Cloud Billing</description>
        <label>General</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>